# libadwaita-test

./: Cargo.toml  LICENSE  README.md  meson.build  nl.albering.jasper.libadwaitatest.json
data/: meson.build  nl.albering.jasper.libadwaitatest.appdata.xml.in  nl.albering.jasper.libadwaitatest.desktop.in  nl.albering.jasper.libadwaitatest.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.rs  libadwaita_test.gresource.xml  main.rs  meson.build  window.rs  window.ui
