[package]
name = "libadwaita-test"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk-macros = "0.2.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs/"
package = "gtk4"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs/"
package = "gdk4"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs/"
features = ["v2_64"]

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs/"
features = ["v2_64"]

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]

#[dependencies.adwaita]
#version = "0.0.0"

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs"
